data/test/type_check/fail/declaration_2.v
localparam x = 0;
integer x = 0;
